--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
 * {
-    color:blue;
+    color:rgb(0, 0, 0);
+}
+
+h1 {
+    text-align:center;
+
+}
+
+header {
+    text-align: center;
+    font-size: 50px;
+}
+
+li {
+    text-align: center;
+    font-style: italic;
+    font-size: 15;
+
+}
+
+ul {
+    text-align: center;
+    list-style-type: none;
+}
+
+
+body  {
+    background-color: aquamarine;
 }
